--- a/src/page-2.html
+++ b/src/page-2.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Page 2</title>
   </head>
   <body>
     <section>
       <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 2</h1>
+    
+      
+      <div class="container">
+        <img class="photo" src="./img/profile-pic.png" alt="Photo of Jessica" srcset="">
+        <h1 class="main-title">Jessica Randall</h1>
+          <h3 class="location">London, United Kingdom</h3>
+          <p class="description">"Front-end developer and avid reader"</p>
+         <div class="social-media-list">
+          <button class="btn-style">GitHub</button>
+          <button class="btn-style">Frontend Mentor</button>
+          <button class="btn-style">LinkedIn</button>
+          <button class="btn-style">Twitter</button>
+          <button class="btn-style">Instagram</button>
+         </div>
+
+      </div>
     </section>
   </body>
 </html>
